Add plugin badge

--- a/index.html
+++ b/index.html
@@ -19,6 +19,9 @@
     
 </head>
 <body>
+    <a class='pluginBadge' target="_blank" href="https://formit3d.github.io/FormItExamplePlugins/index.html" title='Learn more about FormIt Plugins'>
+        <i class="fas fa-plug"></i>
+    </a>
     <h1 class='title'>Plugin Manager</h1>
     <div id ="Root">
     </div>
